@@ -2,6 +2,7 @@ package com.maddogten.mtrack.gui;
 
 import com.maddogten.mtrack.io.MoveStage;
 import com.maddogten.mtrack.util.GenericMethods;
+import com.maddogten.mtrack.util.Variables;
 import javafx.application.Platform;
 import javafx.fxml.FXMLLoader;
 import javafx.scene.Scene;
@@ -33,6 +34,7 @@ public class AboutBox {
         aboutStage.hide();
         aboutStage.setX(aboutStage.getOwner().getX() + (aboutStage.getOwner().getWidth() / 2) - (aboutStage.getWidth() / 2));
         aboutStage.setY(aboutStage.getOwner().getY() + (aboutStage.getOwner().getHeight() / 2) - (aboutStage.getHeight() / 2));
+        if (Variables.specialEffects) GenericMethods.fadeStageIn(aboutStage, 2, log, this.getClass());
         aboutStage.showAndWait();
         log.fine("AboutBox has been closed.");
     }
