@@ -39,7 +39,7 @@ public class Variables {
     public static final int UserSettingsFileVersion = 1004; // Was Changed
     public static final int DirectoryFileVersion = 1000; // Was Changed
 
-    public static final int InternalVersion = 30; // To help keep track of what I'm currently working on / testing.
+    public static final int InternalVersion = 31; // To help keep track of what I'm currently working on / testing.
 
     /**/public static final boolean showOptionToToggleDevMode = true; // false
     /**/public static final boolean startFresh = false; // false -- Won't work unless devMode is true.
